@@ -1,3 +1,6 @@
+2012-03-02
+ * login files for non-DB XML-RPCDs.
+
 2012-02-11
  * finished new guide.py
  * S, waitidle script commands
